Yaml/code-aws/was-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: was-dep
  labels:
    app: was
spec:
  replicas: 1
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      serviceAccountName: storage-sa
      containers:
      - name: was
        # image: jjy4041/ssgpang:c68af1869b43f22494f2781230e770b8c60f928a
        image: jjy4041/ssgpang:35a0ea78de3c0e2808ceff7701eea8fb400a2402
        ports:
        - containerPort: 80
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
